# rust-ball-throwing-game

./: Cargo.toml  README.md  run-browser.sh  run-client-and-n-servers.sh  run-client.sh
public/: index.html
src/: client_events_server_handler.rs  client_message_sender.rs  console_log.rs  current_user.rs  cursor_grab_system.rs  data_channel.rs  env.rs  game_event.rs  game_state.rs  lib.rs  optimistic_local_movement.rs  server_debug_camera.rs  server_message_handler_system.rs  server_snapshot_sender.rs  spawn_user_system.rs  spawn_world.rs  user.rs  user_input.rs  user_movement.rs  websocket.rs  websocket_server.rs
src/client/: client_plugin.rs  handle_state_from_server.rs  mod.rs  send_actions_to_server.rs  server_connection.rs
src/networking/: mod.rs  on_tick.rs  recalculate_client_state.rs
src/server/: apply_actions.rs  apply_events_and_send.rs  apply_events_and_send_on_tick.rs  broadcast_clients.rs  mod.rs  server_future_actions.rs  server_plugin.rs
