[package]
name = "rust_ball_throwing_multipleyer_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1" }
bevy_rapier3d = { version = "0.17.0", features = [ "simd-stable", "debug-render" ] }
wasm-bindgen = "0.2.74"
js-sys = "0.3"
tokio = { version = "1.21.2", features = ["full"] }
tokio-tungstenite = "0.17.2"
serde = "1.0.147"
bincode = "1.3.3"
futures-util = "0.3.25"
futures-channel = "0.3.25"

[dependencies.web-sys]
version = "0.3.22"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
